Add a "list sip source objects" API endpoint
- Add a "ingest/sip-sources/{uuid}/objects" API endpoint
- Add configuration for a single SIP source
- Add a "BucketSource" SIP Source implementation based on
  https://pkg.go.dev/gocloud.dev/blob buckets
