# internal/api/gen/http/cli/enduro/cli.go
@@ -26,7 +26,7 @@ import (
 //	command (subcommand1|subcommand2|...)
 func UsageCommands() string {
 	return `about about
-ingest (monitor-request|monitor|list-sips|show-sip|list-sip-workflows|confirm-sip|reject-sip|upload-sip|download-sip-request|download-sip|list-users)
+ingest (monitor-request|monitor|list-sips|show-sip|list-sip-workflows|confirm-sip|reject-sip|upload-sip|download-sip-request|download-sip|list-users|list-sip-source-objects)
 storage (monitor-request|monitor|list-aips|create-aip|submit-aip|update-aip|download-aip-request|download-aip|move-aip|move-aip-status|reject-aip|show-aip|list-aip-workflows|request-aip-deletion|review-aip-deletion|cancel-aip-deletion|list-locations|create-location|show-location|list-location-aips)
 `
 }
@@ -112,6 +112,12 @@ func ParseEndpoint(
 		ingestListUsersLimitFlag  = ingestListUsersFlags.String("limit", "", "")
 		ingestListUsersOffsetFlag = ingestListUsersFlags.String("offset", "", "")
 		ingestListUsersTokenFlag  = ingestListUsersFlags.String("token", "", "")
+
+		ingestListSipSourceObjectsFlags      = flag.NewFlagSet("list-sip-source-objects", flag.ExitOnError)
+		ingestListSipSourceObjectsUUIDFlag   = ingestListSipSourceObjectsFlags.String("uuid", "REQUIRED", "SIP source identifier -- CURRENTLY NOT USED")
+		ingestListSipSourceObjectsLimitFlag  = ingestListSipSourceObjectsFlags.String("limit", "", "")
+		ingestListSipSourceObjectsCursorFlag = ingestListSipSourceObjectsFlags.String("cursor", "", "")
+		ingestListSipSourceObjectsTokenFlag  = ingestListSipSourceObjectsFlags.String("token", "", "")
 
 		storageFlags = flag.NewFlagSet("storage", flag.ContinueOnError)
 
@@ -219,6 +225,7 @@ func ParseEndpoint(
 	ingestDownloadSipRequestFlags.Usage = ingestDownloadSipRequestUsage
 	ingestDownloadSipFlags.Usage = ingestDownloadSipUsage
 	ingestListUsersFlags.Usage = ingestListUsersUsage
+	ingestListSipSourceObjectsFlags.Usage = ingestListSipSourceObjectsUsage
 
 	storageFlags.Usage = storageUsage
 	storageMonitorRequestFlags.Usage = storageMonitorRequestUsage
@@ -319,6 +326,9 @@ func ParseEndpoint(
 
 			case "list-users":
 				epf = ingestListUsersFlags
+
+			case "list-sip-source-objects":
+				epf = ingestListSipSourceObjectsFlags
 
 			}
 
@@ -452,6 +462,9 @@ func ParseEndpoint(
 			case "list-users":
 				endpoint = c.ListUsers()
 				data, err = ingestc.BuildListUsersPayload(*ingestListUsersEmailFlag, *ingestListUsersNameFlag, *ingestListUsersLimitFlag, *ingestListUsersOffsetFlag, *ingestListUsersTokenFlag)
+			case "list-sip-source-objects":
+				endpoint = c.ListSipSourceObjects()
+				data, err = ingestc.BuildListSipSourceObjectsPayload(*ingestListSipSourceObjectsUUIDFlag, *ingestListSipSourceObjectsLimitFlag, *ingestListSipSourceObjectsCursorFlag, *ingestListSipSourceObjectsTokenFlag)
 			}
 		case "storage":
 			c := storagec.NewClient(scheme, host, doer, enc, dec, restore, dialer, storageConfigurer)
@@ -568,6 +581,7 @@ COMMAND:
     download-sip-request: Request access to SIP download
     download-sip: Download the failed package related to a SIP. It will be the original SIP or the transformed PIP, based on the SIP's `+"`"+`failed_as`+"`"+` value.
     list-users: List all users
+    list-sip-source-objects: List the objects in a SIP source
 
 Additional help:
     %[1]s ingest COMMAND --help
@@ -714,6 +728,20 @@ List all users
 
 Example:
     %[1]s ingest list-users --email "nobody@example.com" --name "Jane Doe" --limit 1 --offset 1 --token "abc123"
+`, os.Args[0])
+}
+
+func ingestListSipSourceObjectsUsage() {
+	fmt.Fprintf(os.Stderr, `%[1]s [flags] ingest list-sip-source-objects -uuid STRING -limit INT -cursor STRING -token STRING
+
+List the objects in a SIP source
+    -uuid STRING: SIP source identifier -- CURRENTLY NOT USED
+    -limit INT: 
+    -cursor STRING: 
+    -token STRING: 
+
+Example:
+    %[1]s ingest list-sip-source-objects --uuid "d1845cb6-a5ea-474a-9ab8-26f9bcd919f5" --limit 1 --cursor "abc123" --token "abc123"
 `, os.Args[0])
 }
 
