# internal/api/gen/http/ingest/server/types.go
@@ -99,6 +99,16 @@ type ListUsersResponseBody struct {
 	Page  *EnduroPageResponseBody    `form:"page" json:"page" xml:"page"`
 }
 
+// ListSipSourceObjectsResponseBody is the type of the "ingest" service
+// "list_sip_source_objects" endpoint HTTP response body.
+type ListSipSourceObjectsResponseBody struct {
+	Objects SIPSourceObjectResponseBodyCollection `form:"objects" json:"objects" xml:"objects"`
+	// Limit of objects per page
+	Limit int `form:"limit" json:"limit" xml:"limit"`
+	// Token to get the next page of objects
+	Next *string `form:"next,omitempty" json:"next,omitempty" xml:"next,omitempty"`
+}
+
 // MonitorRequestNotAvailableResponseBody is the type of the "ingest" service
 // "monitor_request" endpoint HTTP response body for the "not_available" error.
 type MonitorRequestNotAvailableResponseBody struct {
@@ -443,6 +453,63 @@ type ListUsersNotValidResponseBody struct {
 	Fault bool `form:"fault" json:"fault" xml:"fault"`
 }
 
+// ListSipSourceObjectsNotFoundResponseBody is the type of the "ingest" service
+// "list_sip_source_objects" endpoint HTTP response body for the "not_found"
+// error.
+type ListSipSourceObjectsNotFoundResponseBody struct {
+	// Name is the name of this class of errors.
+	Name string `form:"name" json:"name" xml:"name"`
+	// ID is a unique identifier for this particular occurrence of the problem.
+	ID string `form:"id" json:"id" xml:"id"`
+	// Message is a human-readable explanation specific to this occurrence of the
+	// problem.
+	Message string `form:"message" json:"message" xml:"message"`
+	// Is the error temporary?
+	Temporary bool `form:"temporary" json:"temporary" xml:"temporary"`
+	// Is the error a timeout?
+	Timeout bool `form:"timeout" json:"timeout" xml:"timeout"`
+	// Is the error a server-side fault?
+	Fault bool `form:"fault" json:"fault" xml:"fault"`
+}
+
+// ListSipSourceObjectsNotValidResponseBody is the type of the "ingest" service
+// "list_sip_source_objects" endpoint HTTP response body for the "not_valid"
+// error.
+type ListSipSourceObjectsNotValidResponseBody struct {
+	// Name is the name of this class of errors.
+	Name string `form:"name" json:"name" xml:"name"`
+	// ID is a unique identifier for this particular occurrence of the problem.
+	ID string `form:"id" json:"id" xml:"id"`
+	// Message is a human-readable explanation specific to this occurrence of the
+	// problem.
+	Message string `form:"message" json:"message" xml:"message"`
+	// Is the error temporary?
+	Temporary bool `form:"temporary" json:"temporary" xml:"temporary"`
+	// Is the error a timeout?
+	Timeout bool `form:"timeout" json:"timeout" xml:"timeout"`
+	// Is the error a server-side fault?
+	Fault bool `form:"fault" json:"fault" xml:"fault"`
+}
+
+// ListSipSourceObjectsInternalErrorResponseBody is the type of the "ingest"
+// service "list_sip_source_objects" endpoint HTTP response body for the
+// "internal_error" error.
+type ListSipSourceObjectsInternalErrorResponseBody struct {
+	// Name is the name of this class of errors.
+	Name string `form:"name" json:"name" xml:"name"`
+	// ID is a unique identifier for this particular occurrence of the problem.
+	ID string `form:"id" json:"id" xml:"id"`
+	// Message is a human-readable explanation specific to this occurrence of the
+	// problem.
+	Message string `form:"message" json:"message" xml:"message"`
+	// Is the error temporary?
+	Temporary bool `form:"temporary" json:"temporary" xml:"temporary"`
+	// Is the error a timeout?
+	Timeout bool `form:"timeout" json:"timeout" xml:"timeout"`
+	// Is the error a server-side fault?
+	Fault bool `form:"fault" json:"fault" xml:"fault"`
+}
+
 // SIPResponseBodyCollection is used to define fields on response body types.
 type SIPResponseBodyCollection []*SIPResponseBody
 
@@ -532,6 +599,22 @@ type UserResponseBody struct {
 	Name string `form:"name" json:"name" xml:"name"`
 	// Creation date & time of the user
 	CreatedAt string `form:"created_at" json:"created_at" xml:"created_at"`
+}
+
+// SIPSourceObjectResponseBodyCollection is used to define fields on response
+// body types.
+type SIPSourceObjectResponseBodyCollection []*SIPSourceObjectResponseBody
+
+// SIPSourceObjectResponseBody is used to define fields on response body types.
+type SIPSourceObjectResponseBody struct {
+	// Key of the object
+	Key string `form:"key" json:"key" xml:"key"`
+	// Last modification time of the object
+	ModTime *string `form:"mod_time,omitempty" json:"mod_time,omitempty" xml:"mod_time,omitempty"`
+	// Size of the object in bytes
+	Size *int64 `form:"size,omitempty" json:"size,omitempty" xml:"size,omitempty"`
+	// True if the object is a directory, false if it is a file
+	IsDir bool `form:"is_dir" json:"is_dir" xml:"is_dir"`
 }
 
 // NewMonitorResponseBody builds the HTTP response body from the result of the
@@ -654,6 +737,24 @@ func NewListUsersResponseBody(res *ingestviews.UsersView) *ListUsersResponseBody
 	}
 	if res.Page != nil {
 		body.Page = marshalIngestviewsEnduroPageViewToEnduroPageResponseBody(res.Page)
+	}
+	return body
+}
+
+// NewListSipSourceObjectsResponseBody builds the HTTP response body from the
+// result of the "list_sip_source_objects" endpoint of the "ingest" service.
+func NewListSipSourceObjectsResponseBody(res *ingestviews.SIPSourceObjectsView) *ListSipSourceObjectsResponseBody {
+	body := &ListSipSourceObjectsResponseBody{
+		Limit: *res.Limit,
+		Next:  res.Next,
+	}
+	if res.Objects != nil {
+		body.Objects = make([]*SIPSourceObjectResponseBody, len(res.Objects))
+		for i, val := range res.Objects {
+			body.Objects[i] = marshalIngestviewsSIPSourceObjectViewToSIPSourceObjectResponseBody(val)
+		}
+	} else {
+		body.Objects = []*SIPSourceObjectResponseBody{}
 	}
 	return body
 }
@@ -943,6 +1044,51 @@ func NewListUsersNotValidResponseBody(res *goa.ServiceError) *ListUsersNotValidR
 	return body
 }
 
+// NewListSipSourceObjectsNotFoundResponseBody builds the HTTP response body
+// from the result of the "list_sip_source_objects" endpoint of the "ingest"
+// service.
+func NewListSipSourceObjectsNotFoundResponseBody(res *goa.ServiceError) *ListSipSourceObjectsNotFoundResponseBody {
+	body := &ListSipSourceObjectsNotFoundResponseBody{
+		Name:      res.Name,
+		ID:        res.ID,
+		Message:   res.Message,
+		Temporary: res.Temporary,
+		Timeout:   res.Timeout,
+		Fault:     res.Fault,
+	}
+	return body
+}
+
+// NewListSipSourceObjectsNotValidResponseBody builds the HTTP response body
+// from the result of the "list_sip_source_objects" endpoint of the "ingest"
+// service.
+func NewListSipSourceObjectsNotValidResponseBody(res *goa.ServiceError) *ListSipSourceObjectsNotValidResponseBody {
+	body := &ListSipSourceObjectsNotValidResponseBody{
+		Name:      res.Name,
+		ID:        res.ID,
+		Message:   res.Message,
+		Temporary: res.Temporary,
+		Timeout:   res.Timeout,
+		Fault:     res.Fault,
+	}
+	return body
+}
+
+// NewListSipSourceObjectsInternalErrorResponseBody builds the HTTP response
+// body from the result of the "list_sip_source_objects" endpoint of the
+// "ingest" service.
+func NewListSipSourceObjectsInternalErrorResponseBody(res *goa.ServiceError) *ListSipSourceObjectsInternalErrorResponseBody {
+	body := &ListSipSourceObjectsInternalErrorResponseBody{
+		Name:      res.Name,
+		ID:        res.ID,
+		Message:   res.Message,
+		Temporary: res.Temporary,
+		Timeout:   res.Timeout,
+		Fault:     res.Fault,
+	}
+	return body
+}
+
 // NewMonitorRequestPayload builds a ingest service monitor_request endpoint
 // payload.
 func NewMonitorRequestPayload(token *string) *ingest.MonitorRequestPayload {
@@ -1050,6 +1196,18 @@ func NewListUsersPayload(email *string, name *string, limit *int, offset *int, t
 	v.Name = name
 	v.Limit = limit
 	v.Offset = offset
+	v.Token = token
+
+	return v
+}
+
+// NewListSipSourceObjectsPayload builds a ingest service
+// list_sip_source_objects endpoint payload.
+func NewListSipSourceObjectsPayload(uuid string, limit *int, cursor *string, token *string) *ingest.ListSipSourceObjectsPayload {
+	v := &ingest.ListSipSourceObjectsPayload{}
+	v.UUID = uuid
+	v.Limit = limit
+	v.Cursor = cursor
 	v.Token = token
 
 	return v
